【添加题目】原型基本完成

--- a/web/template/base.html
+++ b/web/template/base.html
@@ -7,11 +7,13 @@
   <title>{% block title %}{% end %}</title>
   <link rel="stylesheet" href="{{ static_url('bootstrap.min.css') }}">
   <link rel="stylesheet" href="{{ static_url('bootstrap-responsive.min.css') }}">
+  <link rel="stylesheet" href="{{ static_url('bootstrap-select.min.css') }}">
   {% block head %}{% end %}
 </head>
 <body>
   {% block content %}{% end %}
   <script src="{{ static_url('jquery-1.9.1.min.js') }}"></script>
   <script src="{{ static_url('bootstrap.min.js') }}"></script>
+  <script src="{{ static_url('bootstrap-select.min.js') }}"></script>
   <script src="{{ static_url('test.js') }}"></script>
 </body>
