--- a/web/template/test_data.html
+++ b/web/template/test_data.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h1>Test - data</h1>
 <form action="#" method="post" id="dataform">
-  <input type="text" name="datapath" id="datapath" autocomplete="off" data-provide="typeahead" data-source='["test1", "test2"]'>
+  <input type="text" name="datapath" id="datapath" autocomplete="off" data-provide="typeahead">
 </form>
 <ul id="others">
 </ul>
