--- a/web/template/test_problem.html
+++ b/web/template/test_problem.html
@@ -19,11 +19,11 @@
     <label class="control-label" for="select-checker">Checker</label>
     <div class="controls">
       <select class="selectpicker" id="select-checker" name="checker" title="Select one of the following">
-        <option value="0" disabled>Select one of the following</option>
+        <option disabled>Select one of the following</option>
         <option data-divider="true"></option>
-        <option value="1" data-subtext="(Ignore spaces at the end of a line or the file)">Normal string checker</option>
-        <option value="2" data-subtext="(Need to specify the precision)">Single float number checker</option>
-        <option value="3" data-subtext="(Need to specify the path to the checker)">Special Judge</option>
+        <option value="standard" data-subtext="(Ignore spaces at the end of a line or the file)">Normal string checker</option>
+        <option value="float" data-subtext="(Need to specify the precision)">Single float number checker</option>
+        <option value="special" data-subtext="(Need to specify the path to the checker)">Special Judge</option>
       </select>
       <input type="text" id="input-checker-extra" name="extra" autocomplete="off" data-provide="typeahead">
     </div>
@@ -41,6 +41,6 @@
     </div>
   </div>
 </form>
-<p>
+<p id="status">
 </p>
 {% end %}
