Judge添加一个线程锁，新增个人分点得分。

--- a/webui/template/test_person.html
+++ b/webui/template/test_person.html
@@ -2,6 +2,8 @@
 {% block title %}Test - Person{% end %}
 {% block content %}
 <h1>Test - Person</h1>
+<div id="person-result">
+</div>
 <table class="table table-hover">
   <thead>
     <tr>
