新增单题测试

--- a/webui/template/test_contest.html
+++ b/webui/template/test_contest.html
@@ -10,7 +10,7 @@
 </form>
 <h2>Open a Contest</h2>
 <form id="open-contest" method="post" action="/test/contest/open">
-  <input type="text" name="path" placeholder="Load From">
+  <input type="text" name="path" placeholder="Load From" value="/home/">
   <div><input type="submit" value="Open Contest" class="btn btn-primary"></div>
 </form>
 <h2>Add a Compiler</h2>
