--- a/webui/template/test_contest.html
+++ b/webui/template/test_contest.html
@@ -4,8 +4,8 @@
 <h1>Test - Contest</h1>
 <h2>New a Contest</h2>
 <form id="new-contest" method="post" action="/test/contest/new">
-  <input type="text" name="title" placeholder="Contest Title">
-  <input type="text" name="path" placeholder="Save To">
+  <input type="text" name="title" autocomplete="off" placeholder="Contest Title">
+  <input type="text" name="path" autocomplete="off" placeholder="Save To" value="/home/">
   <div><input type="submit" value="New Contest" class="btn btn-primary"></div>
 </form>
 <h2>Open a Contest</h2>
@@ -15,21 +15,21 @@
 </form>
 <h2>Add a Compiler</h2>
 <form id="add-compiler" method="post" action="/test/contest/addcompiler">
-  <input type="text" name="title" placeholder="Compiler Title" value="GNU C++ Compiler">
-  <input type="text" name="extension" placeholder="Extension" value="cpp">
-  <input type="text" name="command" placeholder="Compile Command" value="g++ %s.cpp -o %s -Wall -Wextra">
-  <input type="text" name="executable" placeholder="Executable File" value="%s">
+  <input type="text" autocomplete="off" name="title" placeholder="Compiler Title" value="GNU C++ Compiler">
+  <input type="text" autocomplete="off" name="extension" placeholder="Extension" value="cpp">
+  <input type="text" autocomplete="off" name="command" placeholder="Compile Command" value="g++ %s.cpp -o %s -Wall -Wextra">
+  <input type="text" autocomplete="off" name="executable" placeholder="Executable File" value="%s">
   <div><input type="submit" value="Add Compiler" class="btn btn-primary"></div>
 </form>
 <h2>Add a Problem</h2>
 <form id="add-problem" method="post" action="/test/contest/addproblem">
-  <div><input type="text" name="title" placeholder="Problem Title"></div>
-  <div><input type="text" name="filename" placeholder="Filename"></div>
+  <div><input type="text" autocomplete="off" name="title" placeholder="Problem Title"></div>
+  <div><input type="text" autocomplete="off" name="filename" placeholder="Filename"></div>
   <div>
-    <input type="text" name="inputs[]" placeholder="Input Filename">
+    <input type="text" name="inputs[]" autocomplete="off" placeholder="Input Filename">
     <button class="btn" id="btn-add-input">Add a Input File</button>
   </div>
-  <div><input type="text" name="output" placeholder="Output Filename"></div>
+  <div><input type="text" name="output" autocomplete="off" placeholder="Output Filename"></div>
   <div>
     <select class="selectpicker" id="select-checker" name="checker" title="Select a checker">
       <option disabled>Select a checker</option>
