--- a/webui/template/test_person.html
+++ b/webui/template/test_person.html
@@ -2,11 +2,11 @@
 {% block title %}Test - Person{% end %}
 {% block content %}
 <h1>Test - Person</h1>
-<textarea id="judge-info" disabled style="font-family: monospace; height: 240px; width: 80%; overflow: hidden; font-size: 13px; line-height: 17px;">
+<textarea id="judge-info" disabled style="font-family: monospace; height: 240px; width: 80%; font-size: 13px; line-height: 17px;">
 </textarea>
-<div id="person-result">
+<div id="person-result" style="font-weight: bold;">
 </div>
-<button id="start-judge" class="btn">Judge All</button>
+<div><button id="start-judge" class="btn">Judge All</button></div>
 <table class="table table-hover">
   <thead>
     <tr>
@@ -16,7 +16,7 @@
       <td>Time</td>
     </tr>
   </thead>
-  <tbody id="people-table">
+  <tbody id="people-table" style="font-weight: bold;">
   </tbody>
 </table>
 {% end %}
