--- a/view/main-nav.ejs
+++ b/view/main-nav.ejs
@@ -15,6 +15,7 @@
         <li<%- active.indexOf('Contestants') !== -1 ? ' class="active"' : '' %>><a href="#">Contestants</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
+        <li<%- active.indexOf('Settings')     !== -1 ? ' class="active"' : '' %>><a href="#">Settings</a></li>
         <li<%- active.indexOf('Contest')     !== -1 ? ' class="active"' : '' %>><a href="#">Contest</a></li>
       </ul>
     </div>
