--- a/view/main-tab-contestants.ejs
+++ b/view/main-tab-contestants.ejs
@@ -12,8 +12,8 @@
   </tbody>
 </table>
 <div id="contestants-button-box">
-  <button type="button" class="btn btn-success">Refresh</button>
-  <button type="button" class="btn btn-primary disabled">Judge</button>
+  <button type="button" class="btn btn-success" id="btn-refresh">Refresh</button>
+  <button type="button" class="btn btn-primary disabled" id="btn-judge">Judge</button>
 </div>
 
 <script>
