--- a/view/person.ejs
+++ b/view/person.ejs
@@ -54,7 +54,7 @@
     <div class="result-footer">
       <ul class="result-left">
         <li><strong>Score: </strong><%= result.score %></li>
-        <li><strong>Time: </strong><%= Number(result.time/1000).toFixed(2).toLocaleString('en-US') %>ms</li>
+        <li><strong>Time: </strong><%= Number(result.time/1000).toFixed(2).toLocaleString('en-US') %> s</li>
       </ul>
       <div class="clear"></div>
     </div>
